# AIWearable

./: .gitignore  CMakeLists.txt  README.md  build_audio_board.sh  partitions.csv  sdkconfig.defaults  secrets_example.txt
PRD/Project_Resources/: adding-hardware-targets.md  audio-codec-dev.md  audio-emulation.md  esp-idf-build-flash.md  esp32-memory-architecture.md  esp32s3-deep-sleep.md  hebrew-font-rendering.md  integration-test.md  io-expander-power-control.md  modular-architecture.md  openclaw-api.md  openclaw-chat-response-handling.md  openclaw-cron-crud.md  openclaw-device-auth.md  openclaw-hooks-activity.md  openclaw-integration.md  openclaw-model-config.md  openclaw-security-patch.md  openclaw-task-management.md  power-consumption.md  serial-monitoring.md  sleep-management.md  stt-language-detection.md  tts-playback.md  ui-event-decoupling.md  voice-device-control.md  wake-word-detection.md  waveshare-audio-board.md  webserver-settings.md  ws-auth-ping-fix.md
components/board/: CMakeLists.txt  Kconfig  board.c  esp_lcd_panel_jd9853.c  idf_component.yml  rgb_ring.c  rgb_ring.h  touch_axs5106l.c
components/board/include/: board.h  board_waveshare_audio.h  esp_lcd_panel_jd9853.h  touch_axs5106l.h
components/camera/: CMakeLists.txt  camera.c
components/camera/include/: camera.h
components/ed25519_lib/: CMakeLists.txt
components/error_log/: CMakeLists.txt  error_log.c
components/error_log/include/: error_log.h
components/esp_audio_codec/: .component_hash  CHECKSUMS.json  CMakeLists.txt  idf_component.yml
components/esp_audio_simple_player/: .component_hash  CHANGELOG.md  CHECKSUMS.json  CMakeLists.txt  Kconfig  README.md  README_CN.md  idf_component.yml
components/esp_audio_simple_player/include/: esp_audio_simple_player.h  esp_audio_simple_player_advance.h
components/esp_audio_simple_player/src/: audio_simple_player_pool.c  audio_simple_player_pool.h  esp_audio_simple_player.c  esp_audio_simple_player_advance.c  esp_audio_simple_player_private.h
components/esp_audio_simple_player/test_apps/: CMakeLists.txt  pytest_esp_audio_simple_player.py  sdkconfig.defaults  sdkconfig.defaults.esp32  sdkconfig.defaults.esp32s3
components/esp_audio_simple_player/test_apps/main/: CMakeLists.txt  aud_simp_player_test.c  esp_embed_tone.cmake  esp_embed_tone.h  idf_component.yml  test_main.c
components/gmf_audio/: .component_hash  CHANGELOG.md  CHECKSUMS.json  CMakeLists.txt  README.md  README_CN.md  esp_gmf_alc.c  esp_gmf_audio_dec.c  esp_gmf_audio_enc.c  esp_gmf_audio_helper.c  esp_gmf_audio_param.c  esp_gmf_bit_cvt.c  esp_gmf_ch_cvt.c  esp_gmf_deinterleave.c  esp_gmf_eq.c  esp_gmf_fade.c  esp_gmf_interleave.c  esp_gmf_mixer.c  esp_gmf_rate_cvt.c  esp_gmf_sonic.c  idf_component.yml
components/gmf_audio/include/: esp_gmf_alc.h  esp_gmf_audio_dec.h  esp_gmf_audio_enc.h  esp_gmf_audio_helper.h  esp_gmf_audio_methods_def.h  esp_gmf_audio_param.h  esp_gmf_bit_cvt.h  esp_gmf_ch_cvt.h  esp_gmf_deinterleave.h  esp_gmf_eq.h  esp_gmf_fade.h  esp_gmf_interleave.h  esp_gmf_mixer.h  (+2 more)
components/gmf_core/: .component_hash  CHANGELOG.md  CHECKSUMS.json  CMakeLists.txt  README.md  README_CN.md  idf_component.yml
components/gmf_io/: .component_hash  CHANGELOG.md  CHECKSUMS.json  CMakeLists.txt  README.md  README_CN.md  esp_gmf_io_embed_flash.c  esp_gmf_io_file.c  esp_gmf_io_http.c  esp_gmf_io_i2s_pdm.c  idf_component.yml  mk_flash_embed_tone.py
components/gmf_io/codec_dev_io/: esp_gmf_io_codec_dev.c  esp_gmf_io_codec_dev.h
components/gmf_io/http_lib/gzip/: gzip_miniz.c  miniz_inflate.h
components/gmf_io/http_lib/gzip/include/: gzip_miniz.h
components/gmf_io/include/: esp_gmf_io_embed_flash.h  esp_gmf_io_file.h  esp_gmf_io_http.h  esp_gmf_io_i2s_pdm.h
components/mp3_player/: CMakeLists.txt  mp3_player.c
components/notes_manager/: CMakeLists.txt  notes_manager.c
components/openclaw/: CMakeLists.txt  idf_component.yml  openclaw_client.c
components/settings/: CMakeLists.txt  settings.c
components/sscma_client/: CMakeLists.txt  idf_component.yml
components/sscma_client/src/: sscma_client_io_spi.c  sscma_client_ops.c
components/stt/: CMakeLists.txt  stt_client.c
components/tts/: CMakeLists.txt  tts_client.c
components/ui/: CMakeLists.txt  ui_rgb_led.c  ui_state_gif.c  ui_tasks.c
components/ui/fonts/: SourceHanSansCN_Medium_16.c
components/ui/include/: ui.h  ui_colors.h  ui_mp3_ui.h  ui_provisioning.h  ui_state_chip.h  ui_state_gif.h  ui_status_bar.h  ui_tasks.h
components/ui/src/: ui_main.c  ui_mp3_ui.c  ui_provisioning.c  ui_state_chip.c  ui_status_bar.c
components/wake_word/: CMakeLists.txt  idf_component.yml  wake_word.c
components/webserver/: CMakeLists.txt  index.html  webserver.c
components/wifi_manager/: CMakeLists.txt  captive_portal.c  wifi_manager.c
main/: CMakeLists.txt  Kconfig.projbuild  app_main.c  app_state.c  app_state_machine.c  app_state_machine.h  app_tasks.c  idf_component.yml  mem_monitor.c  serial_cmd.c  voice_chat.c
main/include/: app_config.h  app_state.h  app_tasks.h  mem_monitor.h  recording_sounds.h  secrets.h  secrets.h.example  serial_cmd.h  voice_chat.h
(+52 files in other folders)
